2017-05-15  Charlie Zender  <zender@uci.edu>

	* Allow ncatted to write empty NC_STRING

	* NCO 4.6.7-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.7-beta01 final changes';git push
	git tag -a 4.6.7-beta01 -m 'ncap2 in-fill, MTA flags, ERWG rgn hints, SGS';git push --tags

2017-05-13 Henry Butowsky  <henryb@hush.com>

	* ncap2 add "missing()" and synonym "mask_miss()" to utl_cls()
	It creates 0/1 array for expression (var == var_miss), returned type same as input type

2017-05-12  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.7-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.7-alpha06 final changes';git push
	git tag -a 4.6.7-alpha06 -m 'Polish and document SGS option';git push --tags

	* Change ncremap pdq_typ to prc_typ to reflect expanded role

	* Document SGS algorithm

	* Disallow SGS source grid inferral due to biases from latitude great/small circle assumptions

2017-05-11  Charlie Zender  <zender@uci.edu>

	* Use dgn_area/diagnose_area flag if ncremap SGS calls nco_grd_nfr()

2017-05-10  Charlie Zender  <zender@uci.edu>

	* Diagnose bad option values in nco_rgr_ini() before calling abort()

	* Re-diagnose inferred area if input area variable has and uses missing values

	* Always infer lat_ntf[0]=-90.0, lat_ntf[lat_nbr]=90.0 for Gaussian grids

2017-05-09  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.7-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.7-alpha05 final changes';git push
	git tag -a 4.6.7-alpha05 -m 'ncremap with sub-gridscale data (-P sgs) works';git push --tags

2017-05-08  Charlie Zender  <zender@uci.edu>

	* Improve verbosity for debugging and generalize names away from ALM/CLM to SGS for "sub-gridcell", and also "fractional area"

	* Allow ncremap to infer source grid when regridding "fractional area" files (not fully working)

2017-05-07  Charlie Zender  <zender@uci.edu>

	* Prevent ncclimo from inadavertently incorrectly (without SGS) regridding ALM/CLM files
