@@ -282,6 +282,7 @@ grd_sng='' # [sng] Grid string
 grd_src='' # [sng] Source grid-file
 grd_src_xmp='grd_src.nc' # [sng] Source grid-file for examples
 hdr_pad='10000' # [B] Pad at end of header section
+hnt_dst='' # [sng] ERWG hint for destination grid
 in_fl='' # [sng] Input file
 in_xmp='in.nc' # [sng] Input file for examples
 inp_aut='No' # [sng] Input file list automatically generated (in ncclimo, or specified with -i in ncremap)
@@ -350,6 +351,7 @@ function fnc_usg_prn { # NB: dash supports fnc_nm (){} syntax, not function fnc_
     echo "${fnt_rvr}-E${fnt_nrm} ${fnt_bld}esmf_opt${fnt_nrm} ESMF ESMF_RegridWeightGen options (default ${fnt_bld}${esmf_opt}${fnt_nrm}) [${fnt_tlc}esmf_opt, esmf, esmf_options${fnt_nrm}]"
     echo "${fnt_rvr}-G${fnt_nrm} ${fnt_bld}grd_sng${fnt_nrm}  Grid generation argument string (empty means none) (default ${fnt_bld}${grd_sng}${fnt_nrm}) [${fnt_tlc}grd_sng, grid_generation, grid_gen, grid_string${fnt_nrm}]"
     echo "${fnt_rvr}-g${fnt_nrm} ${fnt_bld}grd_dst${fnt_nrm}  Grid-file (destination) (empty means none, i.e., infer from dst_fl or use grd_sng or map_fl) (default ${fnt_bld}${grd_dst}${fnt_nrm}) [${fnt_tlc}grd_dst, grid_dest, dest_grid, destination_grid${fnt_nrm}]"
+    echo " ${fnt_bld}--hnt_dst${fnt_nrm}  Hint to ERWG for destination grid (empty means none) (default ${fnt_bld}${hnt_dst}${fnt_nrm}) [${fnt_tlc}hnt_dst, dst_hnt, hint_destination${fnt_nrm}]"
     echo "${fnt_rvr}-I${fnt_nrm} ${fnt_bld}drc_in${fnt_nrm}   Input directory (empty means none) (default ${fnt_bld}${drc_in}${fnt_nrm}) [${fnt_tlc}drc_in, in_drc, dir_in, in_dir, input${fnt_nrm}]"
     echo "${fnt_rvr}-i${fnt_nrm} ${fnt_bld}in_fl${fnt_nrm}    Input file (empty means pipe to stdin or drc_in) (default ${fnt_bld}${in_fl}${fnt_nrm}) [${fnt_tlc}in_fl, in_file, input_file${fnt_nrm}]"
     echo "${fnt_rvr}-j${fnt_nrm} ${fnt_bld}job_nbr${fnt_nrm}  Job simultaneity for parallelism (default ${fnt_bld}${job_nbr}${fnt_nrm}) [${fnt_tlc}job_nbr, job_number, jobs${fnt_nrm}]"
@@ -467,6 +469,7 @@ while getopts :a:CD:d:E:f:g:G:h:I:i:j:Mm:n:O:o:P:p:R:s:T:t:U:u:V:v:w:x:-: OPT; d
 	       grd_dst=?* | grid_dest=?* | dest_grid=?* | destination_grid=?* ) grd_dst="${LONG_OPTARG}" ;; # -g # Destination grid-file
 	       grd_sng=?* | grid_generation=?* | grid_gen=?* | grid_string=?* ) grd_sng="${LONG_OPTARG}" ;; # -G # Grid generation string
 	       drc_in=?* | in_drc=?* | dir_in=?* | in_dir=?* | input=?* ) drc_in="${LONG_OPTARG}" ;; # -i # Input directory
+	       hnt_dst=?* | dst_hnt=?* | hint_destination=?* ) hnt_dst="${LONG_OPTARG}" ;; # # ERWG hint for destination grid
 	       in_fl=?* | in_file=?* | input_file=?* ) in_fl="${LONG_OPTARG}" ;; # -i # Input file
 	       job_nbr=?* | job_number=?* | jobs=?* ) job_usr="${LONG_OPTARG}" ;; # -j # Job simultaneity
 	       mlt_map | multimap | no_multimap | nomultimap ) mlt_map_flg='No' ;; # -M # Multi-map flag
@@ -1384,7 +1387,9 @@ if [ "${grd_src_usr_flg}" = 'Yes' ] || [ "${prc_typ}" = 'sgs' ]; then
 	if [ -f "${hnt_src_fl}" ]; then
 	    rgn_opt="`cat ${hnt_src_fl}`"
 	fi # !hnt_src_fl
-	if [ -f "${hnt_dst_fl}" ]; then
+	if [ -n "${hnt_dst}" ]; then
+	    rgn_opt="${rgn_opt} ${hnt_dst}"
+	elif [ -f "${hnt_dst_fl}" ]; then
 	    rgn_opt="${rgn_opt} `cat ${hnt_dst_fl}`"
 	fi # !hnt_dst_fl
 	cmd_map[${fl_idx}]="ESMF_RegridWeightGen -s ${grd_src} -d ${grd_dst} -w ${map_fl} --method ${alg_opt} ${esmf_opt} ${rgn_opt} > /dev/null"
@@ -1519,7 +1524,9 @@ for ((fl_idx=0;fl_idx<${fl_nbr};fl_idx++)); do
 	    if [ -f "${hnt_src_fl}" ]; then
 		rgn_opt="`cat ${hnt_src_fl}`"
 	    fi # !hnt_src_fl
-	    if [ -f "${hnt_dst_fl}" ]; then
+	    if [ -n "${hnt_dst}" ]; then
+		rgn_opt="${rgn_opt} ${hnt_dst}"
+	    elif [ -f "${hnt_dst_fl}" ]; then
 		rgn_opt="${rgn_opt} `cat ${hnt_dst_fl}`"
 	    fi # !hnt_dst_fl
 	    cmd_map[${fl_idx}]="ESMF_RegridWeightGen -s ${grd_src} -d ${grd_dst} -w ${map_fl} --method ${alg_opt} ${esmf_opt} ${rgn_opt} > /dev/null"
