@@ -35,7 +35,7 @@ Charlie
 
 NEW FEATURES (full details always in ChangeLog):
 
-A. ncremap and ncclimo now
+A. ncremap and ncclimo now....
 
 A. ncap2 has a new function named missing(), aka mask_miss() that
    return an array of the same size of its argument, with values
@@ -43,9 +43,10 @@ A. ncap2 has a new function named missing(), aka mask_miss() that
    are present. The resulting array can be useful in characterizing
    and masking the original array.
 
-A. ncap2 now implements ncra, nces, and ncwa have long implemented this, and now the
-   relevant ncap2 methods (avg, min, max, etc.) record the operation
-   type in the cell_methods attribute.
+A. ncap2 now propagates existing chunking parameters from the input
+   file to the output file, and similarly chunks created variables.
+   The rest of NCO has long implemented comprehensive chunking
+   features and now ncap2 supports the basic methods.
    ncap2 -s 'avg=one_dmn_rec_var.avg()' ~/nco/data/in.nc ~/foo.nc
    http://nco.sf.net/nco.html#cll_mth
 
